# diplom-v2

./: .gitignore  TODO
balovstvo/: Cargo.toml
balovstvo/src/: main.rs
base/: Cargo.toml
base/databases/: test.db
base/examples/: test_comp_control.rs  test_db.rs  test_genesys.rs  test_other.rs  test_parse.rs
base/src/: lib.rs
base/src/compartment/: Compartment.rs  CompartmentInterface.rs  mod.rs
base/src/compartmentSystem/: CompartmentControl.rs  CompartmentControlInterface.rs  mod.rs
base/src/dataStructures/: DataBaseControl.rs  DatabaseControlInterface.rs  ParserControl.rs  mod.rs
base/src/genesys/: Genesys.rs  GenesysInterface.rs  mod.rs
base/src/moleculSystem/: MoleculStructures.rs  MoleculStructuresInterface.rs  MoleculsControl.rs  MoleculsControlInterface.rs  mod.rs
