[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
reqwest = { version = "0.11", features = ["json"] }
tokio-sync = "0.1.8"
scraper = "0.13.0"
mongodb = {version = "2.3.1", features=["tokio-sync"]} 
async-trait = "0.1.59"
futures = "0.3"
serde = "1.0.150"
serde_json = "1.0"
regex = "1.7.0"
chrono = "*"
sha2 = "*"
rand = "*"


